--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "talk-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "proxy": "http://127.0.0.1:5000",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 3000"
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.0.19",
